--- a/src/main/resources/static/assets/css/blog.css
+++ b/src/main/resources/static/assets/css/blog.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 .display-4 {
     font-size: 2.5rem;
 }
+
 @media (min-width: 768px) {
     .display-4 {
         font-size: 3rem;
@@ -63,15 +64,27 @@ h1, h2, h3, h4, h5, h6 {
     flex: 0 0 auto;
 }
 
-.h-250 { height: 250px; }
-@media (min-width: 768px) {
-    .h-md-250 { height: 250px; }
+.h-250 {
+    height: 250px;
 }
 
-.border-top { border-top: 1px solid #e5e5e5; }
-.border-bottom { border-bottom: 1px solid #e5e5e5; }
+@media (min-width: 768px) {
+    .h-md-250 {
+        height: 250px;
+    }
+}
 
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+.border-top {
+    border-top: 1px solid #e5e5e5;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
 
 /*
  * Blog name and description
@@ -81,6 +94,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 2rem;
     font-weight: 400;
 }
+
 .blog-description {
     font-size: 1.1rem;
     color: #999;
@@ -96,6 +110,7 @@ h1, h2, h3, h4, h5, h6 {
 .blog-pagination {
     margin-bottom: 4rem;
 }
+
 .blog-pagination > .btn {
     border-radius: 2rem;
 }
@@ -106,10 +121,12 @@ h1, h2, h3, h4, h5, h6 {
 .blog-post {
     margin-bottom: 4rem;
 }
+
 .blog-post-title {
     margin-bottom: .25rem;
     font-size: 2.5rem;
 }
+
 .blog-post-meta {
     margin-bottom: 1.25rem;
     color: #999;
@@ -125,6 +142,7 @@ h1, h2, h3, h4, h5, h6 {
     background-color: #f9f9f9;
     border-top: .05rem solid #e5e5e5;
 }
+
 .blog-footer p:last-child {
     margin-bottom: 0;
 }
