--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head th:fragment="header">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Daria Pydorenko">
 
-    <link rel="icon" type="image/png" th:href="@{/assets/img/favicon-16x16.png}" sizes="16x16" />
-    <link rel="icon" type="image/png" th:href="@{/assets/img/favicon-32x32.png}" sizes="32x32" />
+    <link rel="icon" type="image/png" th:href="@{/assets/img/favicon-16x16.png}" sizes="16x16"/>
+    <link rel="icon" type="image/png" th:href="@{/assets/img/favicon-32x32.png}" sizes="32x32"/>
 
     <title th:include=":: #pageTitle">Layout Generic Title</title>
 
@@ -16,8 +16,8 @@
 
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
-    <link th:href="@{/assets/css/index.css}" rel="stylesheet" />
-    <link th:href="@{/assets/css/blog.css}" rel="stylesheet" />
+    <link th:href="@{/assets/css/index.css}" rel="stylesheet"/>
+    <link th:href="@{/assets/css/blog.css}" rel="stylesheet"/>
 </head>
 <body>
 </body>
