--- a/src/main/resources/templates/layout/index.html
+++ b/src/main/resources/templates/layout/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:fragment="layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" th:fragment="layout">
 
     <!-- Fragment Header -->
     <head th:replace="fragments/header :: header">
@@ -19,7 +19,12 @@
                     </div>
                     <div class="col-4 d-flex justify-content-end align-items-center">
                         <a class="text-muted" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="mx-3">
+                                <circle cx="10.5" cy="10.5" r="7.5"></circle>
+                                <line x1="21" y1="21" x2="15.8" y2="15.8"></line>
+                            </svg>
                         </a>
                         <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
                     </div>
@@ -46,8 +51,12 @@
             <div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
                 <div class="col-md-6 px-0">
                     <h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
-                    <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
-                    <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
+                    <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and
+                        efficiently about what's most interesting in this post's contents.
+                    </p>
+                    <p class="lead mb-0">
+                        <a href="#" class="text-white font-weight-bold">Continue reading...</a>
+                    </p>
                 </div>
             </div>
 
@@ -60,10 +69,13 @@
                                 <a class="text-dark" href="#">Featured post</a>
                             </h3>
                             <div class="mb-1 text-muted">Nov 12</div>
-                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
+                                lead-in to additional content.
+                            </p>
                             <a href="#">Continue reading</a>
                         </div>
-                        <img class="card-img-right flex-auto d-none d-lg-block" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="">
+                        <img class="card-img-right flex-auto d-none d-lg-block" data-src="holder.js/200x250?theme=thumb"
+                             alt="Card image cap" src="">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -74,10 +86,13 @@
                                 <a class="text-dark" href="#">Post title</a>
                             </h3>
                             <div class="mb-1 text-muted">Nov 11</div>
-                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
+                                lead-in to additional content.
+                            </p>
                             <a href="#">Continue reading</a>
                         </div>
-                        <img class="card-img-right flex-auto d-none d-lg-block" data-src="holder.js/200x250?theme=thumb" alt="Card image cap" src="">
+                        <img class="card-img-right flex-auto d-none d-lg-block" data-src="holder.js/200x250?theme=thumb"
+                             alt="Card image cap" src="">
                     </div>
                 </div>
             </div>
@@ -95,28 +110,56 @@
 
                     <div class="blog-post">
                         <h2 class="blog-post-title">Another blog post</h2>
-                        <p class="blog-post-meta">December 23, 2013 by <a href="#">Jacob</a></p>
+                        <p class="blog-post-meta">December 23, 2013 by
+                            <a href="#">Jacob</a>
+                        </p>
 
-                        <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
+                        <p>Cum sociis natoque penatibus et magnis<a href="#">dis parturient montes</a>, nascetur
+                            ridiculus mus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
+                            vestibulum. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet
+                            fermentum.
+                        </p>
                         <blockquote>
-                            <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <p>Curabitur blandit tempus porttitor.
+                                <strong>Nullam quis risus eget urna mollis</strong>
+                                ornare vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                            </p>
                         </blockquote>
-                        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-                        <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
+                        <p>Etiam porta
+                            <em>sem malesuada magna</em>
+                            mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum
+                            nulla sed consectetur.
+                        </p>
+                        <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non
+                            commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Morbi leo risus,
+                            porta ac consectetur ac, vestibulum at eros.
+                        </p>
                     </div><!-- /.blog-post -->
 
                     <div class="blog-post">
                         <h2 class="blog-post-title">New feature</h2>
-                        <p class="blog-post-meta">December 14, 2013 by <a href="#">Chris</a></p>
+                        <p class="blog-post-meta">December 14, 2013 by
+                            <a href="#">Chris</a>
+                        </p>
 
-                        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                        <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean
+                            lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod.
+                            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa
+                            justo sit amet risus.
+                        </p>
                         <ul>
                             <li>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</li>
                             <li>Donec id elit non mi porta gravida at eget metus.</li>
                             <li>Nulla vitae elit libero, a pharetra augue.</li>
                         </ul>
-                        <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
-                        <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra augue.</p>
+                        <p>Etiam porta
+                            <em>sem malesuada magna</em>
+                            mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum
+                            nulla sed consectetur.
+                        </p>
+                        <p>Donec ullamcorper nulla non metus auctor fringilla. Nulla vitae elit libero, a pharetra
+                            augue.
+                        </p>
                     </div><!-- /.blog-post -->
 
                     <nav class="blog-pagination">
@@ -129,33 +172,67 @@
                 <aside class="col-md-4 blog-sidebar">
                     <div class="p-3 mb-3 bg-light rounded">
                         <h4 class="font-italic">About</h4>
-                        <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+                        <p class="mb-0">Etiam porta
+                            <em>sem malesuada magna</em>
+                            mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum
+                            nulla sed consectetur.
+                        </p>
                     </div>
 
                     <div class="p-3">
                         <h4 class="font-italic">Archives</h4>
                         <ol class="list-unstyled mb-0">
-                            <li><a href="#">March 2014</a></li>
-                            <li><a href="#">February 2014</a></li>
-                            <li><a href="#">January 2014</a></li>
-                            <li><a href="#">December 2013</a></li>
-                            <li><a href="#">November 2013</a></li>
-                            <li><a href="#">October 2013</a></li>
-                            <li><a href="#">September 2013</a></li>
-                            <li><a href="#">August 2013</a></li>
-                            <li><a href="#">July 2013</a></li>
-                            <li><a href="#">June 2013</a></li>
-                            <li><a href="#">May 2013</a></li>
-                            <li><a href="#">April 2013</a></li>
+                            <li>
+                                <a href="#">March 2014</a>
+                            </li>
+                            <li>
+                                <a href="#">February 2014</a>
+                            </li>
+                            <li>
+                                <a href="#">January 2014</a>
+                            </li>
+                            <li>
+                                <a href="#">December 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">November 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">October 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">September 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">August 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">July 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">June 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">May 2013</a>
+                            </li>
+                            <li>
+                                <a href="#">April 2013</a>
+                            </li>
                         </ol>
                     </div>
 
                     <div class="p-3">
                         <h4 class="font-italic">Elsewhere</h4>
                         <ol class="list-unstyled">
-                            <li><a href="#">GitHub</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Facebook</a></li>
+                            <li>
+                                <a href="#">GitHub</a>
+                            </li>
+                            <li>
+                                <a href="#">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="#">Facebook</a>
+                            </li>
                         </ol>
                     </div>
                 </aside><!-- /.blog-sidebar -->
