--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" th:replace="layout/index :: layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" th:replace="layout/index :: layout">
 <body>
 <div class="blog-post" id="content">
     <h2 class="blog-post-title" th:text="${post.header.name}"></h2>
