--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -27,5 +27,8 @@
         text: 'Thumbnail'
     });
 </script>
+
+<!-- Syntax highlighting -->
+<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 </body>
 </html>
