--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,10 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <body th:fragment="footer">
 <footer class="blog-footer">
-    <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.
-    </p>
+    <p>Blog template by <a>Daria Pydorenko</a></p>
     <p>
-        <a href="#">Back to top</a>
+        <a href="/">Back to main page</a>
     </p>
 </footer>
 
