--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -3,7 +3,7 @@
 <body>
 <div class="blog-post" id="content">
     <h2 class="blog-post-title" th:text="${post.header.name}"></h2>
-    <p class="blog-post-meta" th:text="${post.header.date}"></p>
+    <p class="blog-post-meta" th:text="${post.header.date}" by <a href="#">Daria</a></p>
 
     <div th:utext="${post.text}"></div>
 </div><!-- /.blog-post -->
